# bazaar

./: Cargo.toml
src/: main.rs
src/backend/: flatpak_backend.rs  mod.rs
src/db/: mod.rs  search.rs
src/ui/: action.rs  app.rs  appearance.rs  main_window.rs  mod.rs  toast.rs
src/ui/custom_widgets/: appcard.rs  mod.rs  toast.rs
src/ui/tabs/: app_view.rs  installed_page.rs  landing_page.rs  mod.rs
