[package]
name = "bazaar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflatpak = {git = "https://gitlab.gnome.org/World/Rust/libflatpak-rs.git", rev="287473e2"}
appstream = {git = "https://github.com/bilelmoussaoui/appstream.git", rev="1a5ca157"}
rust-fuzzy-search = { git = "https://gitlab.com/EnricoCh/rust-fuzzy-search", rev="ee61779b9"}

iced = {version = "0.8.0", features=["svg", "image", "tokio"]}
iced_native = "0.9.1"
iced_futures = "0.6.0"
iced_aw = {version="0.4.1", default-features=false, features=["wrap", "tabs"]}

cosmic-time = {git="https://github.com/pop-os/cosmic-time", rev = "66685b01"}

once_cell = "1.15"

lazy_static = "1.4.0"
iced_style = "0.7.0"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]


